<resources>
    <string name="app_name">School searcher</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="buscar">Search schools</string>
    <string name="contactar">Contact with the developer</string>
    <string name="preferencias">Change preferences</string>
    <string name="faqs">FAQs</string>
    <string name="title_activity_maps">Map</string>
    <string name="ayuda">Help</string>
    <string name="cercanas">Closer schools</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="idiomas">Languages (disabled)</string>
    <string name="castellano">Spanish</string>
    <string name="catalan">Catalan</string>
    <string name="ingles">English</string>
    <string name="frances">French</string>
    <string name="aleman">German</string>
    <string name="tipo_centro">Type of center</string>
    <string name="ambos">Both</string>
    <string name="laico">Lay</string>
    <string name="religioso">Religious</string>
    <string name="creencias_religiosas">Religious beliefs (disabled)</string>
    <string name="publico">Public</string>
    <string name="concertado">Semi-private</string>
    <string name="privado">Private or semi-private</string>
    <string name="genero">Gender</string>
    <string name="solo_ninas">Only girls</string>
    <string name="solo_ninos">Only boys</string>
    <string name="nombre">Name</string>
    <string name="mail">Mail</string>
    <string name="mensaje">Message</string>
    <string name="enviar">Send</string>
    <string name="section_name">School</string>
    <string name="estas_aqui">You are here</string>
    <string name="mixto">Mixed</string>
    <string name="texto_buscador">Search location here</string>
    <string name="boton_buscar">Search</string>
    <string name="nivel">Education level</string>
    <string name="bachillerato">High school</string>
    <string name="eso">Secondary education</string>
    <string name="primaria">Elementary education</string>
    <string name="infantil">Childhood education</string>
    <string name="colaboracion">Barcelona School of Informatics</string>
    <string name="sinresultadoslocalizacion">There are not results for this location</string>
    <string name="introducelocalizacion">Please introduce a location to search schools</string>
    <string name="errorlocalizacion">There are some problems connecting with the Google location service. Check your connection or contact with the developer.</string>
    <string name="needinternet">We need internet connection to obtain schools information</string>
    <string name="errorconexion">Error obtaining schools. Please check the Internet connection or contact with david.delgado@est.fib.upc.edu.</string>
    <string name="gpspermiso">GPS permission allows us to access location data. Please allow in App Settings for additional functionality.</string>
    <string name="sinresultadoscercanas">There are not results near of your location</string>
    <string name="mensajeenviado">Message sent succesfully</string>
    <string name="introducemail">Please input a correct mail</string>
    <string name="llenacampos">Please fill all the fields to send the message</string>
    <string name="mensajenoenviado">Message cannot be sent. Please check your Internet connection or contact with david.delgado@est.fib.upc.edu.</string>
    <string name="faq_pregunta1">Does the application save some information about the user?</string>
    <string name="faq_pregunta2">Where we obtain the information about the schools?</string>
    <string name="faq_pregunta3">I have any suggestion about the app, is it possible to contact with the developer?</string>
    <string name="faq_respuesta1">No, all the information are locally stored and we won\'t send them to our servers.</string>
    <string name="faq_respuesta2">All the information is obtained from public documents from la Generalitat de Catalunya and the Barcelona Hall</string>
    <string name="faq_respuesta3">Of course! You can do it with the menu option \'Contact with the developer\'.</string>
    <string name="telefono">Phone</string>
    <string name="activaelgps">Enable the GPS and the Internet connection to use the application</string>
    <string name="faq_pregunta4">What benefit obtains the developer with this app?</string>
    <string name="faq_respuesta4">Nothing. This app is a final degree work and it doesn\'t have any commercial objective.</string>
    <string name="faqs_pregunta5">Who is the developer of the app?</string>
    <string name="faqs_respuesta5">The developer is David Delgado Núñez from the Barcelona School of Informatics with the collaboration of Department of Service and Information System Engineering (ESSI).</string>
    <string name="infantil1">Kindergarten</string>
    <string name="infantil2">Childhood education</string>
    <string name="espublico">Public school</string>
    <string name="noespublico">Private school</string>
    <string name="nivel_B">Only high school</string>
    <string name="nivel_J">Only kindergarten</string>
    <string name="nivel_I">Only childhood</string>
    <string name="nivel_P">Only primary education</string>
    <string name="nivel_E">Only secondary education</string>
    <string name="nivel_JI">From kindergarten to childhood</string>
    <string name="nivel_JP">From kindergarten to primary</string>
    <string name="nivel_JE">From kindergarten to secondary</string>
    <string name="nivel_JB">From kindergarten to high school</string>
    <string name="nivel_IP">From childhood to primary</string>
    <string name="nivel_IE">From childhood to secondary</string>
    <string name="nivel_IB">From childhood to high school</string>
    <string name="nivel_PE">From primary to secondary</string>
    <string name="nivel_PB">From primary to high school</string>
    <string name="nivel_EB">From secondary to high school</string>
    <string name="centro_otro_hijo">Brothers in school?</string>

    <string-array name="country_arrays">
        <item>Ninguno</item>
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>

    <string name="country_prompt">Choose a country</string>
    <string name="perfil">User profile</string>
    <string name="perfil_discapacidad">Disability</string>
    <string name="perfil_renta">Help for minimum income</string>
    <string name="perfil_monoparental">Large or single-parent family</string>
    <string name="perfil_cronica">Chronic disease</string>
    <string name="perfil_cronica2">Does the child suffer a chronic disease?</string>
    <string name="perfil_discapacidad2">Do you suffer a disability (+33%)?</string>
    <string name="perfil_renta2">Do you have a minimum income assistance?</string>
    <string name="perfil_monoparental2">Do you have large family or single-parent family?</string>
    <string name="centro_otro_familiar">Family school</string>
    <string name="perfil_domicilio">Home address</string>
    <string name="perfil_domicilio2">Enter your home address</string>
    <string name="perfil_trabajo">Workplace address</string>
    <string name="perfil_trabajo2">Enter your workplace address</string>
    <string name="faqs_pregunta6">How the priority criteria work?</string>
    <string name="faqs_respuesta6">If the person meets conditions, it is granted some points. More information: \nhttp://queestudiar.gencat.cat/es/preinscripcio/estudis/obligatoris/documentacio/</string>
    <string name="criterio_prioridad">Priority criteria</string>
    <string name="puntos">points</string>


</resources>
