<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_perfil" android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/perfil" />
        <item android:id="@+id/nav_cercanas" android:icon="@android:drawable/ic_menu_mylocation"
            android:title="@string/cercanas" />
        <item android:id="@+id/nav_buscar" android:icon="@android:drawable/ic_menu_search"
            android:title="@string/buscar" />
        <item android:id="@+id/nav_manage" android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/preferencias" />
    </group>

    <item android:title="@string/ayuda">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/nav_share" android:icon="@android:drawable/ic_menu_help"
                    android:title="@string/faqs" />
                <item android:id="@+id/nav_send" android:icon="@android:drawable/ic_menu_send"
                    android:title="@string/contactar" />
            </group>
        </menu>
    </item>

    <!--
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_camara" android:icon="@android:drawable/ic_menu_camera"
            android:title="Import" />
        <item android:id="@+id/nav_gallery" android:icon="@android:drawable/ic_menu_gallery"
            android:title="Gallery" />
        <item android:id="@+id/nav_slideshow" android:icon="@android:drawable/ic_menu_slideshow"
            android:title="Slideshow" />
        <item android:id="@+id/nav_manage" android:icon="@android:drawable/ic_menu_manage"
            android:title="Tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item android:id="@+id/nav_share" android:icon="@android:drawable/ic_menu_share"
                android:title="Share" />
            <item android:id="@+id/nav_send" android:icon="@android:drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>
    -->
</menu>